style: new chat input color text

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -101,7 +101,7 @@ nav {
     padding: 10px;
 
     font-size: 1rem;
-    color: var(--text-2);
+    color: var(--black-1);
 
     border-radius: 5px;
     outline: none;
