bug: texto header alinahdo start

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -72,6 +72,10 @@ nav {
     background-color: var(--black-3);
 }
 
+.text_nav {
+    text-align: start;
+}
+
 .icon {
     padding: 5px;
     margin-left: 20px;
